--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="main">
         <div class="content">
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, voluptatem ducimus. Nobis sunt cumque, rem adsimilique repellat, maxime eaque neque ipsam tempore in non porro maiores nemo dolores iusto culppa quis quisquam. Fugit inventore consequatur ipsum dicta deleniti repllat veniam soluta placeat animi quae, neque atque deserunt numquam iste.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, voluptatem ducimus. Nobis sunt cumque, rem ad similique repellat, maxime eaque neque ipsam tempore in non porro maiores nemo dolores iusto culpa quis quisquam. Fugit inventore consequatur ipsum dicta deleniti repellat veniam soluta placeat animi quae, neque atque deserunt numquam iste.
             </p>
         </div>
         
@@ -37,8 +37,6 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, quia.
             </p>
         </div>
-    </div>
-
     </div>
 </body>
 </html>
